# wild_pointer_demo

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BKCppPlayer.cpp  CMakeLists.txt  JNICallbakcHelper.cpp  VideoChannel.cpp  native-lib.cpp
app/src/main/cpp/ffmpeg/include/libavutil/: error.h
app/src/main/include/: BKCppPlayer.h  BaseChannel.h  JNICallbakcHelper.h  VideoChannel.h  log4c.h  safe_queue.h
app/src/main/java/com/wulala/wildpointerdemo/: BKJavaPlayer.kt  FFMPEG.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
